# base-vs-instruct-models-9ebe-codex

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  neurips_2025.sty  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: datasets.tex  generation_start.tex  predictor_results.tex  residual_enrichment.tex  residual_examples.tex  source_stats.tex  source_tests.tex
paper_search_results/: base_versus_instruction_tuned_language_models_token-level_KL_divergence_behavior_20260608_220159.jsonl  selected_papers_metadata.json
papers/: README.md
papers/pages/: 2312.01552_the_unlocking_spell_on_base_llms_rethinking_alignment_via_in_context_learn_manifest.txt  (+4 more)
results/: bootstrap_predictor_metrics.csv  environment.json  heldout_predictions.csv  residual_enrichment.csv  sampled_examples.json  source_pair_tests.csv  source_stats.csv  summary.json  summary_first_run.json  top_abs_residuals.csv  top_negative_residuals.csv  top_positive_residuals.csv
src/: run_divergence_experiment.py
(+5 files in other folders)
