[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "protobuf>=7.35.0",
    "pypdf>=6.13.1",
    "requests>=2.33.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
